Update to Foundation 3.2.5

--- a/optimus_foundation/sources/scss/_settings.scss
+++ b/optimus_foundation/sources/scss/_settings.scss
@@ -112,6 +112,7 @@
 // $topBarSearchWidth: 200px;
 // $topBarBreakPoint: 940px; // Change to 9999px for always mobile layout
 // $topBarNavToggleSize: 8px;
+// $topBarNavToggleColor: #fff;
 
 // UI Settings
 
@@ -122,6 +123,7 @@
 // $progBarPad: 2px;
 // $linkListBottomMargin: 17px -22px;
 // $tableBorderRadius: 3px;
+// $alertBorderRadius: 3px;
 
 // Tooltip Settings
 
