--- a/optimus_foundation/sources/scss/app.scss
+++ b/optimus_foundation/sources/scss/app.scss
@@ -14,7 +14,7 @@
 
 // Control which mixins you have access too
 
-@import "foundation/mixins/clearfix";
+// @import "foundation/mixins/clearfix";
 // @import "foundation/mixins/css-triangle";
 // @import "foundation/mixins/font-size";
 
@@ -45,38 +45,11 @@
 // @import "foundation/components/modules/orbit";
 // @import "foundation/components/modules/reveal";
 // @import "foundation/components/modules/offcanvas";
+// @import "foundation/components/modules/clearing";
+// @import "foundation/components/modules/joyride";
 
 // Media Queries Overrides
 // @import "foundation/components/modules/mqueries";
 
-//
-// Those little tricks to make elastic elements with Foundation
-//
-.pull-left{
-    float:none;
-    @media (min-width: $topBarBreakPoint) {
-        float:left;
-    }
-}
-.pull-right{
-    float:none;
-    @media (min-width: $topBarBreakPoint) {
-        float:right;
-    }
-}
-
-.force-clearfix{
-    @include clearfix;
-}
-
-.row-fluid{
-    width: 100%;
-    max-width: 100%;
-    min-width: 100%;
-    @extend %clearfix;
-    
-    .columns{
-        padding-left: 0;
-        padding-right: 0;
-    }
-}
+// Various useful addons
+@import "addons";
