Updating Optimus dependancy

--- a/optimus_foundation/sources/templates/index.html
+++ b/optimus_foundation/sources/templates/index.html
@@ -15,7 +15,7 @@
             </ul>
 
             <!-- Main Banner Image - place in a paragraph to enforce the modular scale spacing -->
-            <p><img src="http://placehold.it/1000x400&amp;text=[banner img]"></p>
+            <p><img alt="" src="http://placehold.it/1000x400&amp;text=[banner img]"></p>
         </div>
     </div>
     <!-- End Nav and Banner -->
@@ -33,12 +33,12 @@
         <div class="four columns">
             <!-- Gallery sidebar with a block grid. Note: block grid items should be the same size for optimal results -->
             <ul class="block-grid three-up">
-                <li><a href="#"><img src="http://placehold.it/120x120"></a></li>
-                <li><a href="#"><img src="http://placehold.it/120x120"></a></li>
-                <li><a href="#"><img src="http://placehold.it/120x120"></a></li>
-                <li><a href="#"><img src="http://placehold.it/120x120"></a></li>
-                <li><a href="#"><img src="http://placehold.it/120x120"></a></li>
-                <li><a href="#"><img src="http://placehold.it/120x120"></a></li>
+                <li><a href="#"><img alt="" src="http://placehold.it/120x120"></a></li>
+                <li><a href="#"><img alt="" src="http://placehold.it/120x120"></a></li>
+                <li><a href="#"><img alt="" src="http://placehold.it/120x120"></a></li>
+                <li><a href="#"><img alt="" src="http://placehold.it/120x120"></a></li>
+                <li><a href="#"><img alt="" src="http://placehold.it/120x120"></a></li>
+                <li><a href="#"><img alt="" src="http://placehold.it/120x120"></a></li>
             </ul>
         </div>
 
